fix: default pids match rulebooks closer
Signed-off-by: Dominik Schlosser <dominik.schlosser@gmail.com>